2007-10-21  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/av-cp/didl-lite-object.c:
	
	Use the upnp:class name of the DIDL-Lite object rather than the name
	of the it's xml element to determine it's generic class.

2007-10-21  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/av-cp/didl-lite-object.c:
	* src/av-cp/didl-lite-object.h:

	Add a method to retreive the actual full string specifying the
	upnp:class of the DIDL-Lite object.

2007-10-21  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/av-cp/didl-lite-object.c:
	* src/av-cp/didl-lite-object.h:

	Assume that 'desc' is not a separate DIDL object but a part of other
	DIDL objects. This will break the support for 'desc' elements outside
	of container and item elements but with our current API, that is
	hardly any useful since 'desc' element neither have 'parentID'
	property nor 'refID' so the application wouldn't know what to do with
	it.

	* src/av-cp/av-cp-playlisttreeview.c:

	Assume all DIDL-Lite objects are either containers or items.

2007-10-20  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/common/icons.c:
	* src/common/icons.h:

	Add icon for generic file.

	* src/av-cp/av-cp-playlisttreeview.c:
	
	Use generic file icon to represent item objects.

2007-10-19  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/av-cp/av-cp-playlisttreeview.c:

	Display icons for containers and items (currently missing image icon
	is being used) in the playlist treeview.

2007-10-19  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/common/icons.c:
	* src/common/icons.h:

	Add icon for container DIDL-Lite objects.

2007-10-19  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/av-cp/av-cp-playlisttreeview.c:

	- Return False from the button release callback so the treeview rows
	  could be expanded.
	- Pass the correct number of columns to gtk_tree_store_new().
	- Correct the treeview row searching code.
	- Implement addition of DIDL objects to treeview.
	- pack the icon and text in the same cell.
	- Try to list containers above items.
